[gd_scene load_steps=3 format=3 uid="uid://c01hcja4ib5qm"]

[ext_resource type="Script" path="res://scenes/game_matching/matching.gd" id="1_icfkf"]
[ext_resource type="PackedScene" uid="uid://cb2eaetqx7xwj" path="res://scenes/game_matching/matching_ui.tscn" id="2_hvcus"]

[node name="Matching" type="Node2D"]
script = ExtResource("1_icfkf")

[node name="MatchingUi" parent="." instance=ExtResource("2_hvcus")]

[connection signal="allow_place_card" from="." to="MatchingUi" method="_allowed_place_card"]
[connection signal="deny_place_card" from="." to="MatchingUi" method="_denied_place_card"]
[connection signal="displace_card" from="." to="MatchingUi" method="_displaced_card"]
[connection signal="init_UI" from="." to="MatchingUi" method="_init_ui"]
[connection signal="stop_UI" from="." to="MatchingUi" method="_stop_ui"]
[connection signal="request_displace_card" from="MatchingUi" to="." method="_requested_displace_card"]
[connection signal="request_place_card" from="MatchingUi" to="." method="_requested_place_card"]
